--- a/package.json
+++ b/package.json
@@ -68,5 +68,9 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.{js,jsx}": "eslint --cache --fix",
+    "*.{js,css,less,md}": "prettier --write"
   }
 }
