--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "edge-react-components",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Re-usable react components for freelance projects",
   "main": "dist/bundle.cjs.js",
   "module": "dist/bundle.esm.js",
+  "homepage": "https://github.com/mshafivk/edge-react-components#readme",
   "source": "src/index.js",
   "scripts": {
     "start": "start-storybook -p 6006",
@@ -14,16 +15,23 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
-  "keywords": [],
-  "author": "Muhammed Shafi",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
+  "keywords": [
+    "MomentJS Date Formatter"
+  ],
+  "author": "mshafivk@gmail.com",
   "license": "MIT",
-  "dependencies": {
-    "moment": "^2.29.1",
+  "peerDependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-moment": "^1.1.1",
     "webfontloader": "^1.6.28"
+  },
+  "dependencies": {
+    "moment": "^2.29.1",
+    "react-moment": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
