--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "edge-react-components",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Re-usable react components for freelance projects",
   "main": "dist/bundle.cjs.js",
   "module": "dist/bundle.esm.js",
@@ -18,6 +18,9 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "MomentJS Date Formatter"
   ],
