--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-moment": "^1.1.1"
   },
   "devDependencies": {
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "@babel/core": "^7.12.3",
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
