--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Re-usable react components for freelance projects",
   "main": "dist/bundle.cjs.js",
   "module": "dist/bundle.esm.js",
-  "homepage": "https://github.com/mshafivk/edge-react-components#readme",
+  "homepage": "https://mshafivk.github.io/edge-react-components",
   "source": "src/index.js",
   "scripts": {
     "start": "start-storybook -p 6006",
@@ -13,7 +13,8 @@
     "dev": "npm-run-all --parallel build-watch start",
     "test": "jest",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook -o storybook-dist",
+    "deploy-storybook": "gh-pages -d storybook-dist"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
