--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     strategy:
       matrix:
@@ -29,11 +29,11 @@ jobs:
       - name: Run the tests and generate coverage report
         run: npm test -- --coverage
 
-      - name: Build Bundle
-        run: npm run build
-
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
+
+      - name: Build Bundle
+        run: npm run build
 
       - name: Build Storybook
         run: npm run build-storybook
