updated timezone for github actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,9 @@ jobs:
         run: npm install
 
       - name: Run the tests and generate coverage report
+        uses: actions/set-timezone-action@v1.1
+        with:
+          timezoneMacos: 'Asia/Kolkata'
         run: npm test -- --coverage
 
       - name: Upload coverage to Codecov
