--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,11 @@ jobs:
         node-version: [12.x]
 
     steps:
+      - name: Set timezone to Asia/Kolkata
+        uses: actions/set-timezone-action@v1.1
+        with:
+          timezoneMacos: 'Asia/Kolkata'
+
       - name: Checkout repository
         uses: actions/checkout@v2
 
@@ -27,9 +32,6 @@ jobs:
         run: npm install
 
       - name: Run the tests and generate coverage report
-        uses: actions/set-timezone-action@v1.1
-        with:
-          timezoneMacos: 'Asia/Kolkata'
         run: npm test -- --coverage
 
       - name: Upload coverage to Codecov
