--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,3 +1,5 @@
+# This workflow will verify build, deploy latest component lib home page,  and update test coverage
+# Runs on every push
 name: Build
 
 on:
