--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Set Timezone
         uses: szenius/set-timezone@v1.0
         with:
-          timezoneMacos: 'Asia/Kolkata'
+          timezoneMacos: 'Asia/Calcutta'
 
       - name: Checkout repository
         uses: actions/checkout@v2
